Engage Page Responsive: 1. Brands Explore page margin decreased at Responsive design  2. Message Tab partially Responsive

--- a/app/assets/stylesheets/brands-explore.css
+++ b/app/assets/stylesheets/brands-explore.css
@@ -285,6 +285,11 @@ only screen and (max-width: 900px) {
     .influencer-profile-modal label {
         padding: 5px;
     }
+
+    .brands-explore-content-wrapper{
+        margin: 30px 30px;
+    }
+
 }
 
 @media
