--- a/app/views/admin/admins/brand_list.html.erb
+++ b/app/views/admin/admins/brand_list.html.erb
@@ -5,14 +5,15 @@
     <br/>
     <br/>
   <table class="table table-responsive admin-table">
-    <tbody>
+    <thead>
     <tr>
       <th>Firstname</th>
       <th>Lastname</th>
       <th>Email</th>
       <th>Action</th>
     </tr>
-
+    </thead>
+    <tbody>
     <%= render partial: 'user', collection: @brands %>
     </tbody>
   </table>
