--- a/app/views/admin/admins/influencer_list.html.erb
+++ b/app/views/admin/admins/influencer_list.html.erb
@@ -1,16 +1,18 @@
 <% title 'Active Influencer' %>
 
 <div class="admin-page-wrapper">
-  <h1 class="text-center">Active Influencer</h1>
+  <h1 class="">Active Influencer</h1>
 
   <table class="table table-responsive admin-table">
-    <tbody>
+    <thead>
     <tr>
       <th>Firstname</th>
       <th>Lastname</th>
       <th>Email</th>
       <th>Action</th>
     </tr>
+    </thead>
+    <tbody>
     <%= render partial: 'user', collection: @influencers %>
     </tbody>
   </table>
