--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -192,7 +192,7 @@
 
     <!-- main content -->
     <div class="main-content">
-      <%= render partial: 'shared/flash_messages', flash: flash %>
+      <%= render partial: 'shared/flash_messages', flash: flash unless flash[:notice].eql?('Signed out successfully.') %>
 
       <%= yield %>
 
