active/deactive band, influence feature with confirmation complete
need to test and  polish

--- a/app/views/admin/admins/influencer_list.html.erb
+++ b/app/views/admin/admins/influencer_list.html.erb
@@ -3,7 +3,7 @@
 <div class="admin-page-wrapper">
   <h1 class="">Active Influencer</h1>
 
-  <table class="table table-responsive admin-table">
+  <table class="table table-responsive admin-table active-influencer-table">
     <thead>
     <tr>
       <th>Firstname</th>
