--- a/app/views/layouts/admin.html.erb
+++ b/app/views/layouts/admin.html.erb
@@ -42,7 +42,7 @@
             </li>
             <li class="<%= current_path brands_request_admin_admins_path %>">
               <a href="<%= brands_request_admin_admins_path %>">
-                <i class="fa fa-user"></i><span class="space-sidebar">Brands Request</span>
+                <i class="fa fa-user"></i><span class="space-sidebar">Pending Brands Request</span>
               </a>
             </li>
             <li class="<%= current_path influencer_list_admin_admins_path  %>">
