--- a/app/views/admin/admins/_user.html.erb
+++ b/app/views/admin/admins/_user.html.erb
@@ -1,15 +1,15 @@
-<tr>
+<tr id="user-<%= user.id %>">
   <td><%= user.first_name %></td>
   <td><%= user.last_name %></td>
   <td><%= user.email %></td>
   <td>
     <% if user.verified? %>
-        <a href="javascript:;" class="text-red  text-danger deactivate-user">
+        <a href="javascript:;" class="text-red  text-danger deactivate-user" data-id="<%= user.id %>">
           <h5>DEACTIVATE</h5>
         </a>
     <% else %>
-        <a href="javascript:;" class="text-red  text-danger activate-user">
-          <h5>DEACTIVATE</h5>
+        <a href="javascript:;" class="text-success activate-user" data-id="<%= user.id %>">
+          <h5>ACTIVATE</h5>
         </a>
     <% end %>
   </td>
