change admin sing in page title

--- a/app/views/admin/admins/log_in.html.erb
+++ b/app/views/admin/admins/log_in.html.erb
@@ -2,6 +2,7 @@
 <head>
   <%= javascript_include_tag 'application' %>
   <%= stylesheet_link_tag 'application', media: 'all' %>
+  <title>Admin sign in</title>
 </head>
 <body>
 <div class="admin-sign-in-container">
