--- a/app/views/admin/invitations/_invitation.html.erb
+++ b/app/views/admin/invitations/_invitation.html.erb
@@ -1,4 +1,5 @@
 <tr>
-  <td><%= invitation.name %></td>
+  <td><%= invitation.first_name %></td>
+  <td><%= invitation.last_name %></td>
   <td><%= invitation.email %></td>
 </tr>
