--- a/app/views/admin/invitations/index.html.erb
+++ b/app/views/admin/invitations/index.html.erb
@@ -16,7 +16,8 @@
   <table class="table table-responsive admin-table invitation-table">
     <thead>
     <tr>
-      <th>Name</th>
+      <th>First Name</th>
+      <th>Last Name</th>
       <th>Email</th>
     </tr>
     </thead>
