--- a/app/views/campaign_mailer/invitation.html.erb
+++ b/app/views/campaign_mailer/invitation.html.erb
@@ -5,12 +5,16 @@
     an online advertising platform connecting Brands and Influencers.
     Our Influencers can get listed and advocate the brands they love/Our
     brands can enlist the top creators and influencers to leverage their brand.
+  </p>
+<p>
     We initiate branding campaigns and advocate high quality brand engagement.
+</p>
+<p>
     We believe BrandReach is the platform for brands to find the top influencers to leverage
     the brand and influencers to get listed and advocate the brands they love!
   </p>
-<br>
 
-<p>Warm Regards,</p>
-<h3>The BrandReach Team</h3>
+<p>Warm Regards,
+    <h3>The BrandReach Team</h3>
+</p>
 <h4><a href="<%= @brandReach %>">Brandreach</a></h4>
