--- a/app/views/admin/admins/brand_list.html.erb
+++ b/app/views/admin/admins/brand_list.html.erb
@@ -7,8 +7,8 @@
   <table class="table table-responsive admin-table">
     <thead>
     <tr>
-      <th>Firstname</th>
-      <th>Lastname</th>
+      <th>First Name</th>
+      <th>Last Name</th>
       <th>Email</th>
       <th>Action</th>
     </tr>
