--- a/app/views/admin/admins/brands_request.html.erb
+++ b/app/views/admin/admins/brands_request.html.erb
@@ -1,13 +1,13 @@
 <% title 'Pending Brands' %>
 
 <div class="admin-page-wrapper">
-  <h1 class="text-center">Pending Brand requests list</h1>
+  <h1 class="">Pending Brand Requests</h1>
 
   <table class="table table-responsive admin-table">
     <thead>
     <tr>
-      <th>Firstname</th>
-      <th>Lastname</th>
+      <th>First Name</th>
+      <th>Last Name</th>
       <th>Email</th>
       <th>Action</th>
     </tr>
