--- a/app/views/admin/invitations/index.html.erb
+++ b/app/views/admin/invitations/index.html.erb
@@ -9,7 +9,9 @@
   <br/>
   <br/>
   <div class="">
-    <a href="#invitation-modal" data-toggle='modal' class="btn btn-primary raleway-semibold">+ Send new Invitation</a>
+    <a href="#invitation-modal" data-toggle='modal' class="btn btn-primary raleway-semibold">
+      <span class="plus-sign"><i class="fa fa-plus fa-"></i></span>
+      Send new Invitation</a>
   </div>
   <br/>
   <br/>
