--- a/app/views/campaign_mailer/invitation.html.erb
+++ b/app/views/campaign_mailer/invitation.html.erb
@@ -14,7 +14,8 @@
     the brand and influencers to get listed and advocate the brands they love!
   </p>
 
+<p><a href="<%= @brandReach %>">Click</a> here for explore yourself.</p>
+
 <p>Warm Regards,
     <h3>The BrandReach Team</h3>
 </p>
-<h4><a href="<%= @brandReach %>">Brandreach</a></h4>
