--- a/app/views/admin/admins/influencer_list.html.erb
+++ b/app/views/admin/admins/influencer_list.html.erb
@@ -1,7 +1,7 @@
 <% title 'Active Influencer' %>
 
 <div class="admin-page-wrapper">
-  <h1 class="">Active Influencer</h1>
+  <h1 class="">Active Influencers</h1>
 
   <table class="table table-responsive admin-table active-influencer-table">
     <thead>
