--- a/app/views/admin/admins/manage_admins.html.erb
+++ b/app/views/admin/admins/manage_admins.html.erb
@@ -6,7 +6,7 @@
   <div class="alert-danger"></div>
   <br/>
   <div class="">
-    <a href="#add-admin-modal" data-toggle='modal' class="btn btn-primary raleway-semibold">+ Add new admin</a>
+    <a href="#add-admin-modal" data-toggle='modal' class="btn btn-primary raleway-semibold"><span class="plus-sign"><i class="fa fa-plus fa-"></i></span> Add new admin</a>
   </div>
   <br/>
   <br/>
