--- a/app/views/layouts/admin.html.erb
+++ b/app/views/layouts/admin.html.erb
@@ -37,27 +37,27 @@
         <% if policy(:admin).manage_brandreach? %>
             <li class="<%= current_path profile_admin_admins_path %>">
               <a href="<%= profile_admin_admins_path %>">
-                <i class="fa fa-user"></i><span class="space-sidebar">Profile</span>
+                <span class="space-sidebar">Profile</span>
               </a>
             </li>
             <li class="<%= current_path brands_request_admin_admins_path %>">
               <a href="<%= brands_request_admin_admins_path %>">
-                <i class="fa fa-user"></i><span class="space-sidebar">Pending Brands Request</span>
+                <span class="space-sidebar">Pending Brands Request</span>
               </a>
             </li>
             <li class="<%= current_path influencer_list_admin_admins_path  %>">
               <a href="<%= influencer_list_admin_admins_path %>">
-                <i class="fa fa-user"></i><span class="space-sidebar">Active Influencers</span>
+                <span class="space-sidebar">Active Influencers</span>
               </a>
             </li>
             <li class="<%= current_path brand_list_admin_admins_path %>">
               <a href="<%= brand_list_admin_admins_path %>">
-                <i class="fa fa-user"></i><span class="space-sidebar">Active brands</span>
+                <span class="space-sidebar">Active Brands</span>
               </a>
             </li>
             <li class="<%= current_path admin_invitations_path %>">
               <a href="<%= admin_invitations_path %>">
-                <i class="fa fa-user"></i><span class="space-sidebar">Invitations</span>
+                <span class="space-sidebar">Invitations</span>
               </a>
             </li>
         <% end %>
@@ -65,7 +65,7 @@
         <% if policy(:admin).manage_admins? %>
             <li class="<%= current_path manage_admins_admin_admins_path %>">
               <a href="<%= manage_admins_admin_admins_path %>">
-                <span class="glyphicon glyphicon-envelope"></span><span class="space-sidebar">Admins</span>
+                <span class="space-sidebar">Admins</span>
               </a>
             </li>
         <% end %>
