1. Profile Modal All text changed into Raleway, 2. Sign In Modal Middle aligned

--- a/app/assets/stylesheets/style.css.scss
+++ b/app/assets/stylesheets/style.css.scss
@@ -1305,3 +1305,8 @@ h5, .h5 {
   max-width: 500px;
   margin: 20% auto 0;
 }
+
+.font-raleway {
+  font-family: 'Raleway', sans-serif;
+  color: #333333;
+}
