--- a/app/assets/stylesheets/brands-explore.css
+++ b/app/assets/stylesheets/brands-explore.css
@@ -97,7 +97,8 @@
     width: 88%;
     margin: 40px auto;
 }
-.btn-box, .follower-box{
+
+.follower-box{
     height: 80px;
     border-radius: 2px;
     font-size: 15px;
@@ -106,11 +107,15 @@
 
 .btn-box{
     margin-left: 8px;
+    display: inline-block;
 }
 
 .follower-box{
     box-shadow: 0 0 2px #d9d9d9;
-    padding: 12px 16px;
+    padding: 6px;
+    min-width: 100px;
+    text-align: center;
+    margin-top: 12px;
 }
 
 .follower-box .follower-number{
@@ -136,7 +141,6 @@
 
 .btn-message{
     background-color: #f8c102;
-    margin-top: 3px;
 }
 
 .modal-profile .modal-body .profile-info{
@@ -270,7 +274,7 @@ only screen and (max-width: 1050px) {
 }
 
 @media
-only screen and (max-width: 900px) {
+only screen and (max-width: 950px) {
     .like-send-request {
         margin-left: 20px;
     }
@@ -293,6 +297,19 @@ only screen and (max-width: 900px) {
 
     .brands-explore-content-wrapper{
         margin: 30px 30px;
+    }
+
+}
+
+@media
+only screen and (max-width: 480px){
+    .like-send-request {
+        display: block !important;
+        float: none !important;
+    }
+
+    .like-send-request {
+        margin-left: 0;
     }
 
 }
