Now default Checked button in sign in modal is Brand

--- a/app/views/shared/_sign_in_form.html.erb
+++ b/app/views/shared/_sign_in_form.html.erb
@@ -2,10 +2,10 @@
 <div class="modal-body model-iner">
   <div class="row">
     <div class="col-md-12">
-      <input name="sign-in-role" id="signin-role_influencer" value="1" class="signin-role" checked="checked" type="radio">
+      <input name="sign-in-role" id="signin-role_influencer" value="1" class="signin-role" type="radio">
       <label for="signin-role_influencer">I'm an Influencer</label>
       <br>
-      <input name="sign-in-role" id="signin-role_brand" value="0" class="signin-role" type="radio">
+      <input name="sign-in-role" id="signin-role_brand" value="0" class="signin-role" checked="checked" type="radio">
       <label for="signin-role_brand">I'm a Brand</label>
     </div>
   </div>
