text remaning issues

--- a/app/assets/stylesheets/admin.scss
+++ b/app/assets/stylesheets/admin.scss
@@ -7,7 +7,7 @@
 
 .admin-page-wrapper{
   background-color: #F3EEEC;
-  padding: 20px;
+  padding: 35px 20px 20px;
 }
 
 .admin-table thead th{
@@ -35,4 +35,8 @@ table {
 
 .plus-sign{
   font-size: 12px;
+}
+
+.admin-header{
+  margin-bottom: 15px;
 }
