--- a/app/views/admin/admins/brands_request.html.erb
+++ b/app/views/admin/admins/brands_request.html.erb
@@ -1,7 +1,7 @@
-<% title 'Pending Brands' %>
+<% title 'Brand Requests' %>
 
 <div class="admin-page-wrapper">
-  <h1 class="">Pending Brand Requests</h1>
+  <h1 class="">Brand Requests</h1>
 
   <table class="table table-responsive admin-table">
     <thead>
