--- a/app/views/admin/admins/manage_admins.html.erb
+++ b/app/views/admin/admins/manage_admins.html.erb
@@ -1,21 +1,17 @@
 <% title 'Manage admins' %>
 
 <div class="admin-page-wrapper">
-  <h1 class="">Manage admins</h1>
-  <br/>
-  <div class="alert-danger"></div>
-  <br/>
   <div class="">
     <a href="#add-admin-modal" data-toggle='modal' class="btn btn-primary raleway-semibold"><span class="plus-sign"><i class="fa fa-plus fa-"></i></span> Add new admin</a>
   </div>
+  <div class="alert-danger"></div>
   <br/>
-  <br/>
-
+  <h1 class="">Manage admins</h1>
   <table class="table table-responsive admin-table table-admin">
     <thead>
     <tr>
-      <th>Firstname</th>
-      <th>Lastname</th>
+      <th>First Name</th>
+      <th>Last Name</th>
       <th>Email</th>
       <th>Action</th>
     </tr>
