--- a/app/views/admin/invitations/index.html.erb
+++ b/app/views/admin/invitations/index.html.erb
@@ -1,20 +1,17 @@
-<% title 'Sent Invitation list' %>
+<% title 'Sent Invitations' %>
 <style>
     thead>tr{
         background: none;
     }
 </style>
 <div class="admin-page-wrapper">
-  <h1 class="">Sent Invitation list</h1>
-  <br/>
-  <br/>
   <div class="">
     <a href="#invitation-modal" data-toggle='modal' class="btn btn-primary raleway-semibold">
       <span class="plus-sign"><i class="fa fa-plus fa-"></i></span>
       Send new Invitation</a>
   </div>
   <br/>
-  <br/>
+  <h1 class="admin-header">Sent Invitations</h1>
   <table class="table table-responsive admin-table invitation-table">
     <thead>
     <tr>
