--- a/app/views/admin/admins/deactivate_user.js.erb
+++ b/app/views/admin/admins/deactivate_user.js.erb
@@ -1,5 +1,6 @@
 <% if @success %>
-    $('tr#user-<%= @user.id %>').remove();
+//    $('tr#user-<%= @user.id %>').remove();
+    window.location.reload();
 <% else %>
     alert("<%= @message %>");
 <% end %>
