--- a/app/views/admin/admins/influencer_list.html.erb
+++ b/app/views/admin/admins/influencer_list.html.erb
@@ -6,8 +6,8 @@
   <table class="table table-responsive admin-table active-influencer-table">
     <thead>
     <tr>
-      <th>Firstname</th>
-      <th>Lastname</th>
+      <th>First Name</th>
+      <th>Last Name</th>
       <th>Email</th>
       <th>Action</th>
     </tr>
