--- a/app/views/admin/admins/brand_list.html.erb
+++ b/app/views/admin/admins/brand_list.html.erb
@@ -1,9 +1,7 @@
 <% title 'Active Brands' %>
 
 <div class="admin-page-wrapper">
-  <h1 class="">Active Brands</h1>
-    <br/>
-    <br/>
+  <h1 class="admin-header">Active Brands</h1>
   <table class="table table-responsive admin-table">
     <thead>
     <tr>
