--- a/app/views/admin/admins/index.html.erb
+++ b/app/views/admin/admins/index.html.erb
@@ -1,7 +1,7 @@
 <% title 'admin' %>
 
 <div class="admin-page-wrapper">
-  <h1 class="text-center">Admin page </h1>
+  <h1 class="admin-header">Admin page </h1>
 
   <table class="table table-responsive admin-table">
     <tbody>
