--- a/app/views/admin/invitations/index.html.erb
+++ b/app/views/admin/invitations/index.html.erb
@@ -1,9 +1,5 @@
-<% title 'Sent Invitations' %>
-<style>
-    thead>tr{
-        background: none;
-    }
-</style>
+<% title 'Invitations' %>
+
 <div class="admin-page-wrapper">
   <div class="">
     <a href="#invitation-modal" data-toggle='modal' class="btn btn-primary raleway-semibold">
