--- a/app/views/admin/admins/manage_admins.html.erb
+++ b/app/views/admin/admins/manage_admins.html.erb
@@ -6,7 +6,7 @@
   </div>
   <div class="alert-danger"></div>
   <br/>
-  <h1 class="">Manage admins</h1>
+  <h1 class="admin-header">Manage admins</h1>
   <table class="table table-responsive admin-table table-admin">
     <thead>
     <tr>
