change invitation label text

--- a/app/views/admin/invitations/index.html.erb
+++ b/app/views/admin/invitations/index.html.erb
@@ -4,7 +4,7 @@
   <div class="">
     <a href="#invitation-modal" data-toggle='modal' class="btn btn-primary raleway-semibold">
       <span class="plus-sign"><i class="fa fa-plus fa-"></i></span>
-      Send new Invitation</a>
+      New Invitation</a>
   </div>
   <br/>
   <h1 class="admin-header">Sent Invitations</h1>
