change add admin, new invitation label text

--- a/app/views/admin/invitations/index.html.erb
+++ b/app/views/admin/invitations/index.html.erb
@@ -3,7 +3,7 @@
 <div class="admin-page-wrapper">
   <div class="">
     <a href="#invitation-modal" data-toggle='modal' class="btn btn-primary raleway-semibold">
-      <span class="plus-sign"><i class="fa fa-plus fa-"></i></span>
+      <span class="plus-sign"><i class="fa fa-plus"></i></span>
       New Invitation</a>
   </div>
   <br/>
