remove link from admin layout icon remove faq link from admin section

--- a/app/assets/stylesheets/admin.scss
+++ b/app/assets/stylesheets/admin.scss
@@ -10,6 +10,11 @@
   padding: 35px 20px 20px;
 }
 
+ h1, h2, h3, h4, h5, h6, p, td, th{
+   font-family: "Raleway", sans-serif;
+ }
+
+
 .admin-table thead th{
   font-size: 16px;
 }
