--- a/app/views/admin/admins/log_in.html.erb
+++ b/app/views/admin/admins/log_in.html.erb
@@ -5,30 +5,51 @@
   <title>Admin sign in</title>
 </head>
 <body>
+<style>
+  body{
+      margin: 0;
+      height: 100%;
+      width: 100%;
+  }
+        .btn-modal-submit{
+            background-color: #e23f3a;
+            color: #fff;
+            font-size: 14px;
+            font-weight: 400;
+            height: 30px;
+            width: 80px;
+        }
+</style>
 <div class="admin-sign-in-container">
-  <%= render partial: 'shared/flash_messages', flash: flash unless flash[:notice].eql?('Signed out successfully.') %>
-  <br/>
-  <br/>
-  <form class="show-spinner-on-submit" method="post" accept-charset="UTF-8" action="/users/sign_in" data-remote="<%= params[:controller] == 'public' %>" data-parsley-validate="">
-    <%= hidden_field_tag :authenticity_token, form_authenticity_token %>
-    <div class="input_container">
-      <div class="label_l">Email</div>
-      <input data-parsley-id="6021" class="login_input" data-parsley-required="true" data-parsley-trigger="change" name="user[email]" id="user_email" type="text">
-      <ul id="parsley-id-6021" class="parsley-errors-list"></ul>
-    </div>
-    <div class="input_container">
-      <div class="label_l">Password</div>
-      <input data-parsley-id="6194" class="login_input" data-parsley-required="true" data-parsley-trigger="change" name="user[password]" id="user_password" type="password">
-      <ul id="parsley-id-6194" class="parsley-errors-list"></ul>
-    </div>
-    <%= hidden_field_tag 'admin', true %>
-    <button class="btn btn-modal-submit has-spinner" type="submit">
-      <span class="spinner"><i class="fa fa-spinner fa-spin"></i></span>
-      SUBMIT
-    </button>
+  <div class="panel panel-primary">
+    <%= render partial: 'shared/flash_messages', flash: flash unless flash[:notice].eql?('Signed out successfully.') %>
+    <br/>
+    <br/>
+    <form class="admin-sign-in-form" method="post" accept-charset="UTF-8" action="/users/sign_in" data-remote="<%= params[:controller] == 'public' %>" data-parsley-validate="">
+      <%= hidden_field_tag :authenticity_token, form_authenticity_token %>
+      <div class="input_container">
+        <div class="label_l">Email</div>
+        <input data-parsley-id="6021" class="login_input" data-parsley-required="true" data-parsley-trigger="change" name="user[email]" id="user_email" type="text">
+        <ul id="parsley-id-6021" class="parsley-errors-list"></ul>
+      </div>
+      <div class="input_container">
+        <div class="label_l">Password</div>
+        <input data-parsley-id="6194" class="login_input" data-parsley-required="true" data-parsley-trigger="change" name="user[password]" id="user_password" type="password">
+        <ul id="parsley-id-6194" class="parsley-errors-list"></ul>
+      </div>
+      <%= hidden_field_tag 'admin', true %>
+      <button class="btn btn-lg btn-modal-submit has-spinner" type="submit">
+        <span class="spinner"><i class="fa fa-spinner fa-spin"></i></span>
+        Log In
+      </button>
+        <br/>
+        <br/>
+      <div>
+        <%= link_to 'Forgot your password?', new_user_password_path, data: {toggle: 'modal', dismiss: 'modal'} %><br/>
+      </div>
+    </form>
+  </div>
 
-    <%= link_to 'Forgot your password', new_user_password_path, data: {toggle: 'modal', dismiss: 'modal'} %><br/>
-  </form>
 </div>
 </body>
 
