--- a/app/views/admin/admins/log_in.html.erb
+++ b/app/views/admin/admins/log_in.html.erb
@@ -19,13 +19,16 @@
             height: 30px;
             width: 80px;
         }
+        .error-text{
+            color: #ff0000;
+        }
 </style>
 <div class="admin-sign-in-container">
   <div class="panel panel-primary">
     <br/>
     <br/>
     <form class="admin-sign-in-form" method="post" accept-charset="UTF-8" action="/users/sign_in" data-remote="<%= params[:controller] == 'public' %>" data-parsley-validate="">
-      <%= render partial: 'shared/flash_messages', flash: flash unless flash[:notice].eql?('Signed out successfully.') %>
+      <%= render partial: 'admin/admins/admin_flash_messages', flash: flash unless flash[:notice].eql?('Signed out successfully.') %>
 <br/>
       <%= hidden_field_tag :authenticity_token, form_authenticity_token %>
       <div class="input_container">
