invitation text spelling issues solved

--- a/app/views/admin/invitations/_form.html.erb
+++ b/app/views/admin/invitations/_form.html.erb
@@ -5,7 +5,7 @@
     <div class="modal-content">
       <div class="modal-header close-image">
         <button area-label="Close" class="close first_close" data-dismiss="modal" tyle="button"></button>
-        <h3 class="modal-title">Sent Invitation</h3>
+        <h3 class="modal-title">Send Invitation</h3>
       </div>
       <div class="modal-body model-iner">
         <div id="validation-error"></div>
