--- a/app/views/admin/invitations/index.html.erb
+++ b/app/views/admin/invitations/index.html.erb
@@ -7,7 +7,7 @@
       New Invitation</a>
   </div>
   <br/>
-  <h1 class="admin-header">Sent Invitations</h1>
+  <h1 class="admin-header">Invitations</h1>
   <table class="table table-responsive admin-table invitation-table">
     <thead>
     <tr>
