close session sign_in action and redirect to public#home page and show sing in modal

--- a/app/views/layouts/public.html.erb
+++ b/app/views/layouts/public.html.erb
@@ -119,6 +119,11 @@
 </html>
 <script>
     $(function () {
+//        show sing in modal 
+        <% if params[:sign_in_modal]%>
+        $('#signin').modal('show');
+        <% end %>
+
         $('#nav-contact-us a').click(function(){
             $('html, body').animate({
                 scrollTop: $( $.attr(this, 'href') ).offset().top
