Explore > View Profile : Testing Nav Tabs with Acordian

--- a/app/views/influencers/_profile_modal.erb
+++ b/app/views/influencers/_profile_modal.erb
@@ -1,3 +1,6 @@
+<%= stylesheet_link_tag 'bootstrap-responsive-tabs', media: 'all' %>
+<%= javascript_include_tag 'jquery.bootstrap-responsive-tabs.min' %>
+
 <div class="modal fade modal-profile" id="show-brands-profile" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
   <div class="modal-dialog influencer-profile-modal" role="document">
     <div class="modal-content view-profile-modal">
@@ -41,7 +44,7 @@
             <div class="row pricing-section">
               <div class="col-md-12">
                 <div class="social-account-tabs">
-                  <ul class="nav nav-tabs social-account-nav-tabs influencer-social-account-nav-tabs">
+                  <ul class="nav nav-tabs responsive-tabs social-account-nav-tabs influencer-social-account-nav-tabs">
                     <% influencer.active_facebook_accounts.each do |account| %>
                         <li class="influencer-social-account-tab" data-id="<%= account.id %>">
                           <a data-toggle="tab" href="#fb_<%= account.id %>"><i class="social-account-fa-edit fa fa-facebook"></i> <%= account.name %>
@@ -120,5 +123,9 @@
 
             console.log('Now new url is  ' + offerSendBtn.prop('href'));
         });
+    });
+
+    $('.responsive-tabs').responsiveTabs({
+        accordionOn: ['xs', 'sm']
     });
 </script>
