--- a/app/views/admin/invitations/index.html.erb
+++ b/app/views/admin/invitations/index.html.erb
@@ -20,6 +20,7 @@
     <%= render partial: 'invitation', collection: @invitations %>
     </tbody>
   </table>
+  <%= paginate @invitations %>
 </div>
 
 <%= render 'form' %>
