Message/ Offers:  3 div merge into same row in Responsive Design

--- a/app/assets/stylesheets/offers.css
+++ b/app/assets/stylesheets/offers.css
@@ -309,7 +309,7 @@
 }
 
 @media (max-width: 990px) {
-    .offer-header div {
+    .offer-header div:nth-child(n+4){
         display: block;
     }
 
@@ -322,7 +322,7 @@
         margin-bottom: 20px;
     }
 
-    .panel-offers #inbox .offer-header div, .panel-offers #stared_inbox .offer-header div {
+    .panel-offers #inbox .offer-header div:nth-child(n+4), .panel-offers #stared_inbox .offer-header div:nth-child(n+4) {
         border-top: 1px solid #ddd;
         width: 100%;
         padding-left: 10px;
