remove activate link from new brand register mail

--- a/app/views/campaign_mailer/sing_up_notification_to_admin.html.erb
+++ b/app/views/campaign_mailer/sing_up_notification_to_admin.html.erb
@@ -7,6 +7,6 @@
 <p><strong>Phone Number:</strong> <%= @user.phone %></p>
 <p><strong>about their company:</strong> <%= @user.short_bio %></p>
 </br>
-<p>To Activate this user click the following link</p> <a href="<%= verify_brand_profile_profile_index_url(id: @user.id, token: @user.channel_name ) %>">click to activate </a>
+<!--<p>To Activate this user click the following link</p> <a href="<%#= verify_brand_profile_profile_index_url(id: @user.id, token: @user.channel_name ) %>">click to activate </a>-->
 
 
