--- a/app/views/shared/_sign_in_form.html.erb
+++ b/app/views/shared/_sign_in_form.html.erb
@@ -1,16 +1,17 @@
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
 <div class="modal-body model-iner">
-  <div class="row">
-    <div class="col-md-12">
-      <input name="sign-in-role" id="signin-role_influencer" value="1" class="signin-role" type="radio">
-      <label for="signin-role_influencer">I'm an Influencer</label>
-      <br>
-      <input name="sign-in-role" id="signin-role_brand" value="0" class="signin-role" checked="checked" type="radio">
-      <label for="signin-role_brand">I'm a Brand</label>
-    </div>
+  <p>I'm an influencer</p>
+
+  <div class="social-accounts-logo">
+    <a href="<%= user_omniauth_authorize_path('facebook') %>">Facebook &nbsp; &nbsp; <%= image_tag('facebook-icon.png', :alt => "fb") %></a>
   </div>
-  <div class="row hidden" id="brand-signin">
-    <div class="col-md-12">
+
+  <p class="separator-line">
+    <span>OR</span>
+  </p>
+
+  <p>I'm a brand</p>
+
       <% if params[:controller] == 'public' %>
           <div id="sign-in-validation-error">
           </div>
@@ -27,7 +28,7 @@
           <input data-parsley-id="6194" class="login_input" data-parsley-required="true" data-parsley-trigger="change" name="user[password]" id="user_password" type="password">
           <ul id="parsley-id-6194" class="parsley-errors-list"></ul>
         </div>
-        <div>
+        <div class="input_container remember-me-input">
           <input type="hidden" value="0" name="user[remember_me]">
           <input id="user_remember_me" type="checkbox" name="user[remember_me]" value="1">
           <label for="user_remember_me">Remember me</label>
@@ -37,16 +38,6 @@
           SUBMIT
         </button>
 
-        <%= link_to 'Forgot your password', '#forgotpassword', data: {toggle: 'modal', dismiss: 'modal'} %><br/>
+        <%= link_to 'Forgot your password', '#forgotpassword', { class: 'forgot-password-link', data: {toggle: 'modal', dismiss: 'modal'} } %><br/>
       </form>
-    </div>
-  </div>
-
-  <div class="row" id="influencer-signin">
-    <div class="col-md-12">
-      <div class="social-accounts-logo">
-        <a href="<%= user_omniauth_authorize_path('facebook') %>">Facebook &nbsp; &nbsp; <%= image_tag('facebook-icon.png', :alt => "fb") %></a>
-      </div>
-    </div>
-  </div>
 </div>
