--- a/app/views/explores/show.html.erb
+++ b/app/views/explores/show.html.erb
@@ -6,11 +6,11 @@
   <div class="brands-explore-advance-search">
     <form action="<%= explores_path %>" role="form" class="vertical" method="get">
       <div class="row">
-        <div class="col-md-6 col-sm-6 col-xs-10">
+        <div class="pull-left explore-adv-search">
           <p>ADVANCED SEARCH</p>
         </div>
-        <div class="col-md-6 col-sm-6 col-xs-2">
-            <a href="javascript:;" class="btn btn-success btn-reset pull-right">Reset</a>
+        <div class="pull-left">
+            <a href="javascript:;" class="btn-reset">Reset</a>
         </div>
       </div>
 
